# TRIA-ETL

./: Dockerfile  README.md  pyproject.toml  requirements.yaml
capitais_2024/: capitais.dbf  capitais.shp  capitais.shx
src/: __main__.py  ana.py  config.py  db.py  esquemas.py  executa_container.sh
