[project]
name = "TRIA-ETL"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rodrigo-Caldas", email = "rodrigocaldas@id.uff.br"},
]
dependencies = ["geopandas>=1.0.1", "pandas>=2.2.3", "ipykernel>=6.29.5", "matplotlib>=3.10.3", "cartopy>=0.24.1", "pydantic-settings>=2.9.1", "httpx>=0.28.1", "rich>=14.0.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
